Changelog
=========


2.0.4 (unreleased)
------------------

- Added UploadValidator to avoid mail upload as documents.
  Issue #1508 Mail im Originalformat heraufladen / Zusammenhang zu #1275 und Drag und Drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1508/
  [phgross]

- Set the response contenttype correctly, to avoid problems with diazo themes on remote requests.
  Issue #6 Richtigen Content-Type auf der Response bei remote requests zwischen Clients setzen
  https://extranet.4teamwork.ch/intranet/08-produkte-kurse/4teamwork-gever-1/tracker-4teamwork-gever/6
  [phgross]

- Added ``Modify portal content``as needed permission for checkout a document.
  Issue #1553 Problem Auschecken von Dokument aus mandantenuebergreifender
  Aufgabe (GEA -> GDS)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1553
  [phgross]

- Removed Title accessor, because it doesn't differ from the dexterity default accessor.
  Adjust encoding of accessor values, because they changed since the dexterity update.
  Issue #1420 Plone Version und Dexterity Version auf aktuellste Version heben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1420
  [phgross]

- Implement IBaseDocument behavior, to mark documentlike objects.
  Adjust sequence and referncenumber adapters to work for all BaseDocuments.
  Issue #1507 Mails: Dokumentennummer/Aktenzeichen fehlt
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1507
  [phgross]

- User get_css_class instead of deprecated method: css_class_from_obj/css_class_from_brain
  [eschmutz]


2.0.3 (2012-03-12)
------------------

- Fixed redirect in the checkin view for documents stored in a task.
  [phgross]

- Clear any WebDAV locks left over by ExternalEditor if necessary
  [lgraf]


2.0.2 (2012-02-27)
------------------

- Fixed decoding error in the checkin_button_handler, when trying to check in a mail.
  [phgross]
