@@ -1,6 +1,5 @@
+from AccessControl import getSecurityManager
 from Acquisition import aq_inner, aq_parent
-from Products.CMFCore.utils import getToolByName
-from Products.MimetypesRegistry.common import MimeTypeException
 from collective import dexteritytextindexer
 from collective.elephantvocabulary import wrap_vocabulary
 from datetime import date
@@ -23,6 +22,9 @@ from plone.namedfile.field import NamedBlobFile
 from plone.supermodel.interfaces import FIELDSETS_KEY
 from plone.supermodel.model import Fieldset
 from plone.z3cform.textlines.textlines import TextLinesFieldWidget
+from Products.CMFCore.utils import getToolByName
+from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+from Products.MimetypesRegistry.common import MimeTypeException
 from z3c.form import validator
 from z3c.form.browser import checkbox
 from zope import schema
@@ -419,3 +421,34 @@ class RelatedTasks(Tasks):
 
         # do not search on this context, search on site
         self.filter_path = None
+
+
+class LogoutOverlay(grok.View):
+    """This view shows all documents checked out by the logged in user
+    """
+    grok.context(Interface)
+    grok.name('logout_overlay')
+    grok.require('zope2.View')
+    items = []
+
+    def get_checkedout_documents(self):
+        """ Return all documents checked out by the logged in user
+        """
+        catalog = getToolByName(self.context, 'portal_catalog')
+        user_id = getSecurityManager().getUser().getId()
+        return catalog(checked_out=user_id)
+
+    def update(self):
+        self.items = self.get_checkedout_documents()
+
+    def render(self):
+        logout = self.request.form.get('form.submitted', '')
+
+        if not self.items:
+            return "empty"
+
+        if logout:
+            return self.request.RESPONSE.redirect('./logout')
+
+        return ViewPageTemplateFile(
+            './document_templates/logout_overlay.pt')(self)
