@@ -1,0 +1,18 @@
+<form name="logout_overlay" method="POST" action="./logout_overlay" i18n:domain="opengever.document">
+    
+      <h1 class="documentFirstHeading"
+          i18n:translate="alert_not_checked_in_documents">
+        You have not checked in documents. Do you realy want to logout?
+      </h1>
+
+      <h2 i18n:translate="overview_not_checked_in_documents">
+          Following documents are checked out:
+      </h2>
+
+      <ul class="subContents">
+        <li tal:repeat="item view/items">
+            <a target="_blank" tal:attributes="href item/getURL" tal:content="item/pretty_title_or_id"/>
+        </li>
+      </ul>
+      <input type="submit" name="form.submitted" value="Logout" i18n:attributes="value"/>
+</form>
